# kafka-rabbitmq-demonstration

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  run_server.py
.github/workflows/: ci.yaml
src/app/: main.py  models.py  router.py
src/app/services/: ai_model.py
src/app/utils/: __init__.py  helper.py
