[tool.poetry]
name = "fastapi-ml-template"
version = "0.1.0"
description = ""
authors = ["LEE HYUN SEUNG <47444387+hslrock@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pre-commit = "^3.7.1"
mypy = "^1.10.1"
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
force_single_line = true
skip_glob = [
  "training/**",
  "ai-application-common/**",
  "mlops-cktlib/**",
  ".venv/**",
]
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.flake8]
ignore = ["E203", "E266", "E501", "W503", "F403", "F401"]
max-line-length = 120
max-complexity = 12